--- a/Matala2/style.css
+++ b/Matala2/style.css
@@ -98,11 +98,14 @@ nav a{
 .image-container {  
     flex: 1;
     max-width: 100%;
-    height: 100%;  
+    height: 100%;
+    padding: 0;  
 }
 .image-container img {
     height: auto;
-    margin-top: 6.5rem;   
+    margin-top: 6.5rem; 
+    padding: 0;
+      
 }
 .cards-container-about {
     margin-top: 0px;
