--- a/Matala2/style.css
+++ b/Matala2/style.css
@@ -197,7 +197,7 @@ font-size: 20px;
 .sidebar{
     position: fixed;
     top:0;
-    right: 0;
+    right: 3rem;
     height: 100vh;
     width: 20rem;
     z-index: 999;
@@ -284,7 +284,7 @@ font-size: 20px;
       
     
     *{font-family: cursive;
-    margin: 0;}
+    }
     .projects-content-div {
         align-items: center;
         justify-content: center;
